--- a/main.css
+++ b/main.css
@@ -1,37 +1,30 @@
-body{
-    background-color: black;
-    color: azure;
-    
-}
-header{
-    margin: none;
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-p{
-    font-size: xx-large;
-    color : white;
-    text-align: block;
+Body {
+    font-family: 'lato';
+    background-color: #000000 ;
+    height: 100vh;
 }
-nav{
-    position: fixed;
+
+h1 {
+    color: rgb(255, 255, 255);
+    font-size: 148px;
+    text-transform: uppercase;
+    text-align: center;
+    padding-top: 40vh;
+    text-shadow: 0 0 10 px rgba(red, green, blue, alpha);
+    z-index: 9999;
+}
+
+#bg {
+    position: absolute;
     top: 0;
-    width: 100%;
-    background-color: #364043;
-    
-}
-.navbar{
-    height: 100px;
-    width: 100%;
-    display: block;
-}
-nav a{
-  float: right;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px;
-  text-decoration: none;
-  margin-right: 5px;
-  font-size: x-large;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
 }
