added the other pages.

--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@
   background-color: #BF52E1;
   bottom: 0;
   left: 0%;
-  transform-origin: right;
+  transform-origin: center;
   transform: scaleX(0);
   transition: transform .3s ease-in-out;
 }
@@ -32,6 +32,9 @@
 .navbar a:hover::before{
     transform-origin: center;
     transform: scaleX(1);
+}
+.current{
+    color:#BF52E1 !important;
 }
 
 .navbar{
@@ -57,7 +60,7 @@
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 20px;
-    margin-top: 65px;
+    margin-top: 15px;
     padding: 0 20px;
     height: 90%;
 }
@@ -102,6 +105,13 @@ h1 {
     z-index: 9999;
 }
 
+.first-halls{
+    font-size: 55px;
+    padding-top: 65px;
+    padding-bottom: 5px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
 #bg {
     position: absolute;
     top: 0;
@@ -113,4 +123,7 @@ h1 {
 
 p{
     color: white;
+}
+.discord{
+    position: absolute;
 }
