--- a/Faq/faq.css
+++ b/Faq/faq.css
@@ -57,6 +57,7 @@
 }
 
 Body {
+    overflow: hidden;
     font-family: 'lato';
     background-color: #000000 ;
     height: 100vh;
@@ -74,7 +75,7 @@ h1 {
 }
 
 .first-halls{
-    font-size: 55px;
+    font-size: 65px;
     padding-top: 65px;
     padding-bottom: 5px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -88,7 +89,107 @@ h1 {
     right: 0;
     z-index: -1;
 }
+.box{
+    position: absolute;
+    width: 95%;
+    max-height: 80% !important;
+    background-color: rgba(15, 17, 17, 0.5) ;
+    margin: 0 2.5%;
+    overflow-y: scroll;
+}
+h2 span{
+    font-family: monospace;
+    font-size: 55px;
+    color: white;
+    background-image: linear-gradient(
+        to right,
+        rgb(46, 7, 122),
+        rgb(165, 8, 8)
+    )
+}
 
 p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    font-size: 25px;
+    display: block;
     color: white;
+    text-align: center;
+    padding-left: 12%;
+    padding-right: 12%;
+}
+h2{
+    font-size: 30px;
+    text-align: center;
+    display: block;
+    color: white;
+    padding: 10px 50px;
+}
+h3{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+    text-align: center;
+    display: block;
+    color: white;
+    padding: 10px 50px ;
+}
+
+.headline {
+    font-size: 35px;
+}
+
+.below{
+    font-size: 25px;
+    padding-bottom: 50px;
+}
+.underline{
+    text-decoration: underline;
+    padding-top: 25px;
+}
+.spaceforheader{
+    padding-bottom: 35px;
+}
+
+.dn{
+    box-shadow: inset 0 0 0 0 #BF52E1;
+    text-decoration: none;
+    color: #BF52E1;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+}
+
+.dn:hover {
+    box-shadow: inset 290px 0 0 0 #BF52E1;
+    color: white;
+  }
+.icon{
+    max-width: 35px;
+    max-height: 35px;
+}
+.some-space{
+    padding-top: 20px;
+}
+.nitro{
+    max-width: 30px;
+    max-height: 30px;
+}
+.bold{
+    font-weight: bolder;
+}
+
+::-webkit-scrollbar{
+    width: 1em;
+}
+
+::-webkit-scrollbar-track{
+    background: #270033;
+    border-radius: 100vw;
+    margin-block: 0.5em;
+}
+
+::-webkit-scrollbar-thumb{
+    background: #56076e;
+    border-radius: 100vw;
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background: #440d55;
 }
