--- a/Faq/faq.css
+++ b/Faq/faq.css
@@ -50,7 +50,7 @@
     padding-top: 5px;
     
 }
-.navbar img{
+.navbar img, .small img{
     position: absolute;
     width: 50px;
     left: 2%
@@ -107,7 +107,6 @@ h2 span{
         rgb(165, 8, 8)
     )
 }
-
 p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
     font-size: 25px;
@@ -132,6 +131,86 @@ h3{
     color: white;
     padding: 10px 50px ;
 }
+.small{
+    display: none;
+}
+@media only screen and (max-width: 600px){
+    .navbar{
+        display: none;
+    }
+
+    .small{
+        display: inline-block;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height:50px;
+        text-align: right;
+        padding-left: 5px;
+        background-color: rgba(15, 17, 17, 0.5);
+        padding-top: 5px;
+    }
+    .dbut{
+        background-color: #22012c;
+        color: white;
+        padding: 13px;
+        width: 120px;
+        border: none;
+        position: relative;
+    }
+
+    
+    .drop-content{
+        display: none;
+        position: absolute;
+        background-color: #3a014b;
+        min-width: 120px;
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+        z-index: 1;
+        border-radius:1vw ;
+        
+        
+    }
+    .drop-content a{
+        color: white;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        
+        
+    }
+    .drop-content a:hover{
+        background-color: #7f14a0;
+    }
+    .show{
+        display: block;
+        right: 0;
+        position: absolute;
+        text-align: center;
+        transform: translateY(0px)
+        
+    }
+    .first-halls{
+        font-size: 50px !important;
+    }
+    h2{
+        font-size: 20px !important;
+        padding-left: 5% ;
+        padding-right: 5% ;
+    }
+    p{
+        font-size: 17px;
+        padding-left: 5% ;
+        padding-right: 5% ;
+    }
+    h3{
+        font-size: 22px !important;
+        padding-left: 7%;
+        padding-right: 7%;
+    }
+}
+
+
 
 .headline {
     font-size: 35px;
