--- a/main.css
+++ b/main.css
@@ -307,6 +307,7 @@ h1 {
     p{
         padding-left: 5% !important;
         padding-right: 5% !important;
+        font-size: 17px !important;
     }
 }
 p{
