--- a/guides/guides.css
+++ b/guides/guides.css
@@ -189,6 +189,12 @@ h1 {
         font-size: 25px ;
     }
 }
+@media only screen and (max-width: 400px){
+    .video{
+        width: 350px;
+        min-height: 225px !important;
+    }
+}
 p{
     color: white;
 }
