--- a/main.css
+++ b/main.css
@@ -121,6 +121,16 @@ h1 {
     right: 0;
     z-index: -1;
 }
+.dn{
+    box-shadow: inset 0 0 0 0 #BF52E1;
+    text-decoration: none;
+    color: #BF52E1;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+}
+.dn:hover {
+    box-shadow: inset 100px 0 0 0 #BF52E1;
+    color: white;
+  }
 .small{
     display: none;
 }
