--- a/main.css
+++ b/main.css
@@ -176,6 +176,37 @@ h1 {
 .scaler {
     display: none;
 }
+.afk a, .runs a{
+    text-decoration: none;
+}
+.afk a:active, .runs a:active{
+    text-decoration: none;
+}
+.rbox{
+    display: flex;
+    background-color: rgba(65, 4, 122, 0.5) !important;
+    height: 50px;
+    margin-top: 10px;
+    width: 95%;
+    margin-left: 2.5%;
+    justify-content: space-between;
+    align-items: center;
+}
+.left{
+    text-align: left;
+    font-size: 20px;
+    padding-left: 3%;
+}
+.mid{
+    text-align: center;
+    font-size: 20px;
+    padding-right: 5%;
+}
+.right{
+    text-align: right;
+    font-size: 20px;
+    padding-right: 10px;
+}
 
 @media only screen and (max-width: 1400px) {
     .pusbal {
