--- a/main.css
+++ b/main.css
@@ -111,6 +111,9 @@
     grid-row-start: 1;
     grid-row-end: 3;
 }
+.servers{
+    max-height: 85%;
+}
 
 .something {
     grid-column-start: 5;
@@ -153,19 +156,25 @@ h1 {
 .server-list {
     display: flex;
     flex-direction: column;
+    align-items: center;
 
 }
 
+.server-section{
+    text-decoration: none;
+}
+.server-img{
+    margin-top: 10px;
+}
 .dn {
     box-shadow: inset 0 0 0 0 #BF52E1;
-    text-decoration: none;
     color: #BF52E1;
     transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
     font-size: 2rem;
 }
 
 .dn:hover {
-    box-shadow: inset 125px 0 0 0 #BF52E1;
+    box-shadow: inset 200px 0 0 0 #BF52E1;
     color: white;
     justify-content: right;
 }
