--- a/main.css
+++ b/main.css
@@ -111,11 +111,13 @@
     grid-row-start: 1;
     grid-row-end: 3;
 }
-.servers{
+
+.servers {
     max-height: 85%;
 }
 
 .something {
+
     grid-column-start: 5;
 }
 
@@ -160,12 +162,14 @@ h1 {
 
 }
 
-.server-section{
+.server-section {
     text-decoration: none;
 }
-.server-img{
+
+.server-img {
     margin-top: 10px;
 }
+
 .dn {
     box-shadow: inset 0 0 0 0 #BF52E1;
     color: #BF52E1;
@@ -186,49 +190,48 @@ h1 {
 .scaler {
     display: none;
 }
-.void{
-    background: linear-gradient(
-        90deg,
-        rgb(66, 4, 165),
-        rgb(0, 0, 0)
-    ) !important;
-}
-.cult{
-    background: linear-gradient(
-        90deg,
-        rgb(175, 2, 2),
-        rgb(0, 0, 0)
-    ) !important;   
-}
-.shatters{
-    background: linear-gradient(
-        90deg,
-        rgb(6, 49, 4),
-        rgb(0, 0, 0)
-    ) !important;
-}
-.fungal{
-    background: linear-gradient(
-        90deg,
-        rgb(4, 40, 107),
-        rgb(0, 0, 0)
-    ) !important;
-}
-.nest{
-    background: linear-gradient(
-        90deg,
-        rgb(156, 72, 3),
-        rgb(0, 0, 0)
-    ) !important;
+
+.void {
+    background: linear-gradient(90deg,
+            rgb(66, 4, 165),
+            rgb(0, 0, 0)) !important;
 }
 
-.afk a, .runs a{
+.cult {
+    background: linear-gradient(90deg,
+            rgb(175, 2, 2),
+            rgb(0, 0, 0)) !important;
+}
+
+.shatters {
+    background: linear-gradient(90deg,
+            rgb(6, 49, 4),
+            rgb(0, 0, 0)) !important;
+}
+
+.fungal {
+    background: linear-gradient(90deg,
+            rgb(4, 40, 107),
+            rgb(0, 0, 0)) !important;
+}
+
+.nest {
+    background: linear-gradient(90deg,
+            rgb(156, 72, 3),
+            rgb(0, 0, 0)) !important;
+}
+
+.afk a,
+.runs a {
     text-decoration: none;
 }
-.afk a:active, .runs a:active{
+
+.afk a:active,
+.runs a:active {
     text-decoration: none;
 }
-.rbox{
+
+.rbox {
     display: flex;
     background-color: rgba(65, 4, 122, 0.5) !important;
     height: 50px;
@@ -238,17 +241,20 @@ h1 {
     justify-content: space-between;
     align-items: center;
 }
-.left{
+
+.left {
     text-align: left;
     font-size: 20px;
     padding-left: 3%;
 }
-.mid{
+
+.mid {
     text-align: center;
     font-size: 20px;
     padding-right: 5%;
 }
-.right{
+
+.right {
     text-align: right;
     font-size: 20px;
     padding-right: 10px;
