--- a/main.css
+++ b/main.css
@@ -83,6 +83,8 @@
 .pusbal {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    /* grid-template-rows: 50%; */
     gap: 20px;
     margin-top: 15px;
     padding: 0 20px;
@@ -96,24 +98,27 @@
 
 .afk {
     grid-row-start: 1;
-    grid-row-end: 3;
+    grid-row-end: 4;
     overflow-y: scroll;
 }
 
 .runs {
     grid-row-start: 1;
-    grid-row-end: 3;
+    grid-row-end: 4;
     overflow-y: scroll;
 }
 
 #news {
     grid-column: span 2;
     grid-row-start: 1;
-    grid-row-end: 3;
+    grid-row-end: 4;
 }
 
 .servers {
-    max-height: 85%;
+    grid-column-start: 5;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    
 }
 
 .something {
@@ -174,7 +179,7 @@ h1 {
     box-shadow: inset 0 0 0 0 #BF52E1;
     color: #BF52E1;
     transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 
 .dn:hover {
@@ -235,7 +240,7 @@ h1 {
     display: flex;
     background-color: rgba(65, 4, 122, 0.5) !important;
     height: 50px;
-    margin-top: 10px;
+    margin-top: 20px;
     width: 95%;
     margin-left: 2.5%;
     justify-content: space-between;
@@ -268,10 +273,11 @@ h1 {
     .scaler {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
         gap: 20px;
         margin-top: 15px;
         padding: 0 20px;
-        height: fit-content;
+        height: 80%;
 
     }
 
@@ -281,18 +287,19 @@ h1 {
     }
 
     .afk {
-        grid-row-end: 3 !important;
+        grid-row-end: 4 !important;
     }
 
     .news {
+        grid-column-start: 3 !important;
         grid-row-start: 1 !important;
-        grid-row-end: 2 !important;
-        height: 350px;
+        grid-row-end: 4 !important;
     }
 
     .servers {
-        grid-column-start: 3 !important;
-        height: 250px;
+        grid-column-start: 4 !important;
+        grid-row-start: 1 !important;
+        grid-row-end: 3 !important;
     }
 
     .something {
@@ -307,8 +314,8 @@ h1 {
 
     .scaler {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 4;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
         gap: 20px;
         margin-top: 15px;
         padding: 0 20px;
@@ -317,36 +324,38 @@ h1 {
 
     .afk {
         grid-row-start: 1 !important;
-        grid-row-end: 3 !important;
+        grid-row-end: 1 !important;
         grid-column-start: 1 !important;
-        grid-column-end: 3 !important;
+        grid-column-end: 2 !important;
         height: 500px;
 
     }
 
     .runs {
         grid-row-start: 1 !important;
-        grid-row-end: 3 !important;
-        grid-column-start: 3 !important;
-        grid-column-end: 5 !important;
+        grid-row-end: 2 !important;
+        grid-column-start: 2 !important;
+        grid-column-end: 3 !important;
     }
 
     .news {
-        grid-row-start: 3 !important;
-        grid-row-end: 4 !important;
-        height: 350px;
+        grid-row-start: 2 !important;
+        grid-row-end: 3 !important;
+        grid-column-start: 1 !important;
+        height: 500px;
     }
 
     .servers {
-        grid-row-start: 4 !important;
+        grid-row-start: 2 !important;
+        grid-row-end: 3 !important;
         grid-column-start: 2 !important;
-        grid-column-end: 4 !important;
+        grid-column-end: 3 !important;
     }
 
     .something {
         grid-row-start: 3 !important;
-        grid-column-start: 3 !important;
-        grid-column-end: 5 !important;
+        grid-column-start: 1 !important;
+        grid-column-end: 3 !important;
     }
 }
 
@@ -388,15 +397,21 @@ h1 {
 
     .servers {
         grid-row-start: 4 !important;
+        grid-row-end: 5 !important;
         grid-column-start: 1 !important;
         grid-column-end: 1 !important;
+        height: 400px;
 
     }
 
+    .dn image{
+        justify-content:5 ;
+    }
     .something {
         grid-row-start: 5 !important;
         grid-column-start: 1 !important;
         grid-column-end: 1 !important;
+        height: 200px;
     }
 
     .navbar {
