--- a/main.css
+++ b/main.css
@@ -22,6 +22,9 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #440d55;
 }
+body{
+    overflow: auto !important;
+}
 
 .navbar a {
     padding: 20px;
@@ -87,30 +90,38 @@
     gap: 20px;
     margin-top: 15px;
     padding: 0 20px;
-    height: 80%;
+    height: 81%;
 }
 
 .pusbal div {
     background-color: rgba(15, 17, 17, 0.5);
     border-radius: 15px;
+    overflow: auto;
+}
+.head-title{
+    font-size: 1.7rem;
+}
+#bigNews{
+    font-size: 2rem !important;
 }
 
 .afk {
     grid-row-start: 1;
     grid-row-end: 4;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .runs {
     grid-row-start: 1;
     grid-row-end: 4;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 #news {
     grid-column: span 2;
     grid-row-start: 1;
     grid-row-end: 4;
+    overflow-y: auto;
 }
 
 .servers {
@@ -168,6 +179,7 @@ h1 {
 
 .server-section {
     text-decoration: none;
+    overflow-y: auto;
 }
 
 .server-img {
@@ -208,7 +220,7 @@ h1 {
 
 .rbox {
     display: flex;
-    background-color: rgba(65, 4, 122, 0.5) !important;
+    background-color: rgba(65, 4, 122, 0.0) !important;
     height: 65px;
     margin-top: 20px;
     width: 95%;
@@ -263,6 +275,57 @@ h1 {
     font-size: 20px;
     padding-right: 10px;
 }
+
+.top{
+    margin-top: 15px;
+}
+
+.biggus{
+    position: relative;
+    background-color: rgba(15, 17, 17, 0.0) !important;
+    border-bottom: 3px solid #270033;
+    border-top: 3px solid #270033;
+    height: 135px;
+    margin-top: 5px;
+    font-family:'Times New Roman', Times, serif
+}
+
+.biggus h3{
+    color: white;
+    font-family:'Times New Roman', Times, serif !important;
+    font-size: 2.0rem;
+    text-align: left;
+    padding: 10px 10px 0 10px;
+}
+
+.biggus p{
+    font-size: 1.5rem;
+    text-align: left;
+    padding: 10px 10px 0 10px;
+}
+
+.something, .something a{
+    text-align: center;
+    text-decoration: none;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+#something{
+    font-size: 2rem;
+    padding-top: 10px;
+}
+
+#something-two{
+    font-size: 1.5rem;
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
+.something a{
+    font-size: 2.5rem;
+}
+
 
 @media only screen and (max-width: 1400px) {
     .pusbal {
