--- a/main.css
+++ b/main.css
@@ -191,12 +191,14 @@ h1 {
     color: #BF52E1;
     transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
     font-size: 1.8rem;
+    border-radius: 10px;
 }
 
 .dn:hover {
     box-shadow: inset 200px 0 0 0 #BF52E1;
     color: white;
     justify-content: right;
+    border-radius: 10px;
 }
 
 
@@ -218,6 +220,9 @@ h1 {
     text-decoration: none;
 }
 
+.under{
+    text-align: center;
+}
 .rbox {
     display: flex;
     background-color: rgba(65, 4, 122, 0.0) !important;
@@ -228,6 +233,7 @@ h1 {
     justify-content: space-between;
     align-items: center;
 }
+
 .void {
     background: linear-gradient(90deg,
             rgb(66, 4, 165),
@@ -326,7 +332,9 @@ h1 {
     font-size: 2.5rem;
 }
 
-
+.V{
+    display: none;
+}
 @media only screen and (max-width: 1400px) {
     .pusbal {
         display: none;
@@ -377,7 +385,7 @@ h1 {
     .scaler {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
+        grid-template-rows: 500px 500px 200px;
         gap: 20px;
         margin-top: 15px;
         padding: 0 20px;
@@ -422,9 +430,16 @@ h1 {
 }
 
 @media only screen and (max-width: 600px) {
+    .D{
+        display: none;
+    }
+    .V{
+        display: inherit;
+    }
     .scaler {
         display: grid;
         grid-template-columns: repeat(1, 1fr) !important;
+        grid-template-rows: repeat(3, 1fr);
         gap: 20px;
         margin-top: 15px;
         padding: 0 20px;
@@ -462,10 +477,14 @@ h1 {
         grid-row-end: 5 !important;
         grid-column-start: 1 !important;
         grid-column-end: 1 !important;
-        height: 400px;
-
     }
 
+    .server-list{
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    
     .dn image{
         justify-content:5 ;
     }
@@ -543,6 +562,19 @@ h1 {
         padding-left: 5% !important;
         padding-right: 5% !important;
         font-size: 17px !important;
+    }
+    .server-text{
+        font-size: 1.5rem !important;
+        text-align: center;
+        overflow: hidden;
+        margin-left: 17px !important;
+        margin-bottom: 15px !important;
+    }
+    #something{
+        font-size: 1.8rem !important;
+    }
+    #something-two{
+        font-size: 1.5rem !important;
     }
 }
 
