--- a/main.css
+++ b/main.css
@@ -232,6 +232,15 @@ h1 {
     margin-left: 2.5%;
     justify-content: space-between;
     align-items: center;
+    overflow-y: none !important;
+}
+
+.rbox:hover{
+    filter: brightness(150%);
+    transform: scale(1.02);
+}
+.biggus:hover{
+    filter: brightness(150%);
 }
 
 .void {
@@ -518,19 +527,25 @@ h1 {
         width: 120px;
         border: none;
         position: relative;
+        border-radius: 2rem !important;
     }
-
+    .dbut:hover{
+        background-color: #7f14a0 !important;
+        cursor: pointer;
+    }
+    .cover{
+        border-radius: 2rem !important;
+    }
 
     .drop-content {
         display: none;
         position: absolute;
-        background-color: #3a014b;
+        background-color: #22012c;
         min-width: 120px;
         box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
         z-index: 1;
-        border-radius: 1vw;
-
-
+        border-radius: 2rem;
+        margin-top: 2px;
     }
 
     .drop-content a {
@@ -538,9 +553,9 @@ h1 {
         padding: 12px 16px;
         text-decoration: none;
         display: block;
+        border-radius: 2rem !important;
+    }   
 
-
-    }
 
     .drop-content a:hover {
         background-color: #7f14a0;
