--- a/aboutsus/aboutus.css
+++ b/aboutsus/aboutus.css
@@ -63,16 +63,17 @@
         display: none;
     }
 
-    .small{
-        display: inline-block;
-        position: absolute;
+    .small {
+        display: block;
+        position: fixed;
         top: 0;
         width: 100%;
-        height:50px;
+        height: 50px;
         text-align: right;
         padding-left: 5px;
-        background-color: rgba(15, 17, 17, 0.5);
+        background-color: rgba(15, 17, 17, 1);
         padding-top: 5px;
+        z-index: 4;
     }
     .dbut {
         background-color: #22012c;
