--- a/main.css
+++ b/main.css
@@ -517,8 +517,9 @@ h1 {
         height: 50px;
         text-align: right;
         padding-left: 5px;
-        background-color: rgba(15, 17, 17, 0.5);
+        background-color: rgba(15, 17, 17, 1);
         padding-top: 5px;
+        z-index: 4;
     }
 
     .dbut {
