--- a/Faq/faq.css
+++ b/Faq/faq.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 .navbar a{
@@ -66,7 +67,6 @@ Body {
 h1 {
     color: rgb(255, 255, 255);
     font-size: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-transform: uppercase;
     text-align: center;
     padding-top: 10px;
@@ -98,7 +98,6 @@ h1 {
     overflow-y: scroll;
 }
 h2 span{
-    font-family: monospace;
     font-size: 55px;
     color: white;
     background-image: linear-gradient(
@@ -108,7 +107,6 @@ h2 span{
     )
 }
 p{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
     font-size: 25px;
     display: block;
     color: white;
@@ -124,7 +122,6 @@ h2{
     padding: 10px 50px;
 }
 h3{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 25px;
     text-align: center;
     display: block;
