--- a/aboutsus/aboutus.css
+++ b/aboutsus/aboutus.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 .navbar a{
@@ -181,7 +182,6 @@ h1 {
 }
 
 p{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
     font-size: 25px;
     display: block;
     color: white;
@@ -197,7 +197,6 @@ h2{
     padding: 10px 50px;
 }
 h3{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 25px;
     text-align: center;
     display: block;
