--- a/public/aboutsus/aboutus.css
+++ b/public/aboutsus/aboutus.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 .navbar a{
@@ -45,7 +46,7 @@
     text-align: right;
     font-size: 30px;
     padding-left: 5px;
-    background-color: rgb(15, 17, 17);
+    background-color: rgba(15, 17, 17, 0.5);
     display: block;
     padding-top: 5px;
     
@@ -71,7 +72,7 @@
         height: 50px;
         text-align: right;
         padding-left: 5px;
-        background-color: rgba(15, 17, 17, 0.5);
+        background-color: rgba(15, 17, 17, 1);
         padding-top: 5px;
         z-index: 4;
     }
@@ -181,7 +182,6 @@ h1 {
 }
 
 p{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
     font-size: 25px;
     display: block;
     color: white;
@@ -197,7 +197,6 @@ h2{
     padding: 10px 50px;
 }
 h3{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 25px;
     text-align: center;
     display: block;
