--- a/public/main.css
+++ b/public/main.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -138,7 +139,6 @@ body{
 
 body {
     overflow: hidden;
-    font-family: 'lato';
     background-color: #000000;
     height: 100vh;
 }
@@ -230,9 +230,9 @@ h1 {
     margin-top: 20px;
     width: 95%;
     margin-left: 2.5%;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    overflow-y: none !important;
+    overflow: none !important;
 }
 
 .rbox:hover{
@@ -243,51 +243,21 @@ h1 {
     filter: brightness(150%);
 }
 
-.void {
-    background: linear-gradient(90deg,
-            rgb(66, 4, 165),
-            rgb(0, 0, 0)) !important;
-}
-
-.cult {
-    background: linear-gradient(90deg,
-            rgb(175, 2, 2),
-            rgb(0, 0, 0)) !important;
-}
-
-.shatters {
-    background: linear-gradient(90deg,
-            rgb(6, 49, 4),
-            rgb(0, 0, 0)) !important;
-}
-
-.fungal {
-    background: linear-gradient(90deg,
-            rgb(4, 40, 107),
-            rgb(0, 0, 0)) !important;
-}
-
-.nest {
-    background: linear-gradient(90deg,
-            rgb(156, 72, 3),
-            rgb(0, 0, 0)) !important;
-}
-
 .left {
     text-align: left;
-    font-size: 20px;
+    font-size: 1.1rem;
     padding-left: 3%;
 }
 
 .mid {
     text-align: center;
-    font-size: 20px;
+    font-size: 1rem;
     padding-right: 5%;
 }
 
 .right {
     text-align: right;
-    font-size: 20px;
+    font-size: 1rem;
     padding-right: 10px;
 }
 
@@ -302,12 +272,11 @@ h1 {
     border-top: 3px solid #270033;
     height: 135px;
     margin-top: 5px;
-    font-family:'Times New Roman', Times, serif
+    overflow: none;
 }
 
 .biggus h3{
     color: white;
-    font-family:'Times New Roman', Times, serif !important;
     font-size: 2.0rem;
     text-align: left;
     padding: 10px 10px 0 10px;
@@ -384,6 +353,13 @@ h1 {
 
     .something {
         grid-column-start: 4 !important;
+    }
+
+    .biggus h3{
+        font-size: 1.5rem;
+    }
+    .biggus p{
+        font-size: 1rem;
     }
 }
 
@@ -580,8 +556,12 @@ h1 {
         padding-right: 5% !important;
         font-size: 17px !important;
     }
+    
+    .server-img{
+        width: 5rem;
+    }
     .server-text{
-        font-size: 1.5rem !important;
+        font-size: 1rem !important;
         text-align: center;
         overflow: hidden !important;
         margin-left: 17px !important;
@@ -589,13 +569,20 @@ h1 {
         margin-bottom: 15px !important;
     }
     #something{
-        font-size: 1.8rem !important;
+        font-size: 1.5rem !important;
     }
     #something-two{
         font-size: 1.5rem !important;
     }
+    h3{
+        font-size: 1.5rem !important;
+    }
 }
-
+@media only screen and (max-width: 300px) {
+    .server-img{
+        width: 75px;
+    }
+}
 p {
     color: white;
 }
