--- a/Faq/faq.css
+++ b/Faq/faq.css
@@ -98,7 +98,7 @@ h1 {
     overflow-y: scroll;
 }
 h2 span{
-    font-size: 55px;
+    font-size: 3.5rem;
     color: white;
     background-image: linear-gradient(
         to right,
@@ -106,6 +106,7 @@ h2 span{
         rgb(165, 8, 8)
     )
 }
+
 p{
     font-size: 25px;
     display: block;
@@ -202,6 +203,12 @@ h3{
         font-size: 20px !important;
         padding-left: 5% ;
         padding-right: 5% ;
+    }
+    h2 span{
+        font-size: 2.5rem; 
+    }
+    .sus{
+        font-size: 1.9rem;
     }
     p{
         font-size: 17px;
