--- a/public/main.css
+++ b/public/main.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: Helvetica, Arial, sans-serif;
+    text-decoration: none !important;
 }
 
 ::-webkit-scrollbar {
