--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: Helvetica, Arial, sans-serif;
+    text-decoration: none !important;
 }
 
 ::-webkit-scrollbar {
@@ -22,6 +23,9 @@
 
 ::-webkit-scrollbar-thumb:hover {
     background: #440d55;
+}
+a:-webkit-any-link{
+    text-decoration: none !important;
 }
 body{
     overflow: auto !important;
@@ -122,7 +126,7 @@ body{
     grid-column: span 2;
     grid-row-start: 1;
     grid-row-end: 4;
-    overflow-y: auto;
+    overflow-x:hidden;
 }
 
 .servers {
@@ -179,11 +183,16 @@ h1 {
 
 .server-section {
     text-decoration: none;
-    overflow-y: auto;
+    overflow: hidden
 }
 
 .server-img {
     margin-top: 10px;
+    overflow: hidden;
+}
+.server-img:hover{
+    transform: scale(1.1);
+    transition: ease-in-out 0.15s;
 }
 
 .dn {
@@ -223,6 +232,14 @@ h1 {
 .under{
     text-align: center;
 }
+.afk div{
+    overflow: hidden !important;
+    background-color: rgba(0, 0, 0, 0.0);
+}
+.runs div{
+    overflow: hidden !important;
+    background-color: rgba(0, 0, 0, 0.0);
+}
 .rbox {
     display: flex;
     background-color: rgba(65, 4, 122, 0.0) !important;
@@ -237,10 +254,13 @@ h1 {
 
 .rbox:hover{
     filter: brightness(150%);
-    transform: scale(1.02);
+    transform: scale(1.05);
+    transition: ease-in-out 0.15s;
 }
 .biggus:hover{
     filter: brightness(150%);
+    transform: scale(1.02);
+    transition: ease-in-out 0.15s;
 }
 
 .left {
@@ -272,25 +292,22 @@ h1 {
     border-top: 3px solid #270033;
     height: 135px;
     margin-top: 5px;
-    overflow: none;
 }
 
 .biggus h3{
     color: white;
     font-size: 2.0rem;
     text-align: left;
-    padding: 10px 10px 0 10px;
+    padding: 10px 15px 0 15px;
 }
 
 .biggus p{
     font-size: 1.5rem;
     text-align: left;
-    padding: 10px 10px 0 10px;
+    padding: 10px 15px 0 15px;
 }
 
-.news a{
-    text-decoration: none;
-}
+
 .something, .something a{
     text-align: center;
     text-decoration: none;
