--- a/Map gen/ui.css
+++ b/Map gen/ui.css
@@ -7,16 +7,13 @@
 
 #map {
     cursor: default;
-    width: 100vh;
-    height: 100vh;
+    width: 80vh;
+    height: 80vh;
     max-width: calc(100vw - 260px);
     max-height: calc(100vw - 260px);
     min-height: 448px;
     min-width: 448px;
-    margin-top: 0;
-    margin-bottom: 0;
     touch-action: manipulation;
-    float: left;
 }
 
 #map:focus {
@@ -24,19 +21,20 @@
 }
 
 #map>canvas {
-    width: 100vh;
-    height: 95vh;
+    width: 80vh;
+    height: 80vh;
     max-width: calc(100vw - 260px);
     max-height: calc(100vw - 260px);
     min-height: 448px;
     min-width: 448px;
     touch-action: manipulation;
+    
 }
 
 #display {
     float: left;
-    width: 220px;
-    height: 100vh;
+    width: 250px;
+    height: 80vh;
     padding-left: 19px;
     padding-right: 19px;
     max-height: calc(100vw - 260px);
@@ -50,6 +48,13 @@
     margin-left: 50px;
     margin-top: 20px;
     max-height: min(52px, calc((100vh - 350px)/3));
+}
+
+#display h3{
+    padding-left: 0px;
+    padding-right: 10px;
+    font-size: 1.2em;
+    display: inline-block;
 }
 
 @media only screen and (orientation: landscape) and (max-width: 400px) {
@@ -82,16 +87,12 @@ main {
 }
 
 body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
     font: 20px Arial;
-    overflow-y: hidden;
-    overflow-x: hidden;
 }
 
-main {}
+main {
+    background-color: aqua !important;
+}
 
 #display>div>div>div:first-child {
     float: left;
