--- a/Map gen/mapgen.css
+++ b/Map gen/mapgen.css
@@ -56,6 +56,7 @@
     width: 50px;
     left: 2%
 }
+
 .small{
     display: none;
 }
@@ -129,6 +130,14 @@
     p{
         padding-left: 5% !important;
         padding-right: 5% !important;
+    }
+    #buttons {
+        display: inline-flex;
+        width: 100%;
+        max-width: 350px;
+        flex-wrap: wrap;
+        flex-basis: 2;
+        justify-content: space-between;
     }
     
 }
